--- a/posts/2018-11-20.md
+++ b/posts/2018-11-20.md
@@ -29,7 +29,7 @@ These particular records have a type that is in essence an array of strings six-
 
 Before going anywhere too exotic, like Fiji (sigh), the `String` type totally works in differential dataflow. You can go and do graph computations where the node type is `String`, or `(Vec<String>, bool)`, or whatever crazy types you kids use to do your graph processing in Javascript (lol, I know... "types").
 
-The `String` type works but it can be a bit inefficient when compared to something like `usize`, which is just a much simpler type to work with when we want to hash-distribute records, or sort records, or group them by keys. It is also much easier to clone a `usize` than a `String`---the latter means we must allocate some memory and most likely de-allocate it at some future point---and generally even using `String` types means we have some memory indirection along our critical path (farewell, branchless sort performance!).
+The `String` type works but it can be a bit inefficient when compared to something like `usize`, which is just a much simpler type to work with when we want to hash-distribute records, or sort records, or group them by keys. It is also much more efficient to clone a `usize` than a `String`---the latter means we must allocate some memory and most likely de-allocate it at some future point---and generally even using `String` types means we have some memory indirection along our critical path (farewell, branchless sort performance!).
 
 ### Interning Strings
 
@@ -43,7 +43,7 @@ Single-threaded, string replacement would be super easy:
 
 ```rust
 /// Ensure `string` exists in `map`, return unique identifier.
-fn intern(string: String, map: &mut HashMap<String, usize>) -> usize {
+fn intern_in(string: String, map: &mut HashMap<String, usize>) -> usize {
     let len = map.len();
     *map.entry(string)
         .or_insert(len)
@@ -193,7 +193,7 @@ let horror: Collection<_, [String; 6]>;
 and what we want most is to assign unique identifiers to each six-tuple.
 
 ```rust
-// Use the string interning method.
+// Use the string interning method up above.
 let horror_ids = intern(&horror);
 ```
 
