--- a/posts/2018-11-20.md
+++ b/posts/2018-11-20.md
@@ -293,3 +293,140 @@ attr_collections[0]
 The arrangement going in to the first `join_core` has been reduced, but the row identifiers are still in order. All off differential dataflow's join operators are implemented to seek rather than scan between keys, and so a sparse set of filtered keys will allow the operator to zip forward through the keys in `attr_arrangeds[3]`, rather than scanning all of them.
 
 This works less well once we've rocked things down to interned string identifiers, but .. well maybe this section should have come before that section. Still working on that.
+
+---
+
+### Performance Update (2018-11-23)
+
+It turns out this computation led me down an interesting performance rabbit hole, and I've just returned with fabulous and wonderful stories!
+
+Let's talk through the `intern` function up above, and what it does. We will tease out a few performance issues, ones that you might not have even realized were in your power to fix (one still isn't), and see things get a fair bit better by doing so.
+
+#### Baseline performance
+
+The core of `intern`'s iterative computation takes the full set of `(round, string)` inputs we have and groups them by their candidate hash value, and produces winners and losers as output (where losers get their round incremented):
+
+```rust
+    temp.map(|pair| (pair.hashed(), pair))
+        .group(|_hash, input, output| {
+            output.push((input[0].0.clone(), 1));
+            for ((round, record),_count) in input[1..].iter() {
+                output.push(((*round+1, record.clone()), 1));
+            }
+        })
+        .map(|(_hash, pair)| pair)
+```
+
+This is all well and good. Let's see how long it takes to intern 1,000,000 integers (not strings, sorry; but this is easier):
+
+    Echidnatron% cargo run --release --example test -- 10000000
+        Finished release [optimized + debuginfo] target(s) in 0.09s
+         Running `target/release/examples/test 10000000`
+    12.505527384s
+    ^C
+    Echidnatron%
+
+Hard to know if this is particularly good (it's about 1.25 microseconds per identifier). The process's memory use stabilizes at 1.31GB which is around 131 bytes per identifier. That is a bit larger than we might expect.
+
+It turns out that our program is doing something silly, at least silly for this type of computation. Our `group` operator receives inputs with largely distinct hash values, and for these inputs it simply reproduces them as output. To stay sane, the `group` operator maintains both its input and output collections, so it maintains two nearly identical copies.
+
+Seems pretty natural, though. Unless we want to invent a new `group` implementation, which we (I) don't.
+
+#### Switching to differences
+
+Our computation determines the "new" pairs `(round, string)` by incrementing the round field of a relatively small number of records. What if instead we asked `group` to produce only the changes?
+
+What does that mean? Isn't differential dataflow already incrementalized? Yes, yes, but I mean something different. What if we compute "how should we change `temp` to avoid collisions?", and then concatenate the results with `temp`:
+
+```rust
+    temp.map(|pair| (pair.hashed(), pair))
+        .group(|_hash, input, output| {
+            // output.push((input[0].0.clone(), 1));
+            for ((round, record),_count) in input[1..].iter() {
+                output.push(((*round+0, record.clone()),-1));
+                output.push(((*round+1, record.clone()), 1));
+            }
+        })
+        .map(|(_hash, pair)| pair)
+        .concat(&temp)
+```
+
+It is a bit weird to do this ourselves, rather than asking differential dataflow to do it for us, but we are in the special situation where the `group` operator has the same input as output, and we want to do input v. output differences, rather than time-by-time differences which differential does well.
+
+In some weird interpretation we are doing "spatial differencing" rather than "temporal differencing", relating different locations in our dataflow. Never believe that just because someone has fancy names for things means they understand what is going on.
+
+For example, watch this:
+
+    Echidnatron% cargo run --release --example test -- 10000000
+        Finished release [optimized + debuginfo] target(s) in 0.08s
+         Running `target/release/examples/test 10000000`
+    15.039220586s
+    ^C
+    Echidnatron%
+
+That took longer. What a pity. On the other hand, it stabilizes at a memory footprint of just 578MB, which is about half the size of our prior attempt, which is a success! That is some 57.8 bytes per record, which is basically what we should expect given our data structures (seven eight byte records, including the hash, record, two offsets, a two-dimensional timestamp, and a difference).
+
+So what is going on that makes it go slower, despite using half the memory?
+
+#### Optimizing iteration
+
+The short version (there is a longer version; it involved cursing) is:
+
+Our `iterate` method develops all `(round, string)` pairs, and so at some point (the beginning) we need to bring in these initial values, apply one step of our logic, and then subtract the initial values. We have to do this even when nothing changes, because we have to check that nothing has changed. When nothing changes this difference cancels and we don't have anything to write down (yay!) but we had to do the work to determine this (oh well...).
+
+To work around this, we will need to write a different computation. A computation that doesn't iteratively develop the full collection of `(round, string)` pairs, but perhaps instead iteratively develops the changes needed to apply to the *initial* `collection` (rather than changes to `temp`).
+
+Here is how I wrote that:
+
+```rust
+/// Assigns a unique identifier to each element of `collection`.
+fn intern<G, D>(collection: &Collection<G, D>) -> Collection<G, (D, usize)>
+where
+    G: Scope,
+    G::Timestamp: Lattice,
+    D: Data,
+{
+    // capture the initial (round, record) pairs.
+    let init = collection.map(|record| (0, record));
+
+    init.filter(|_| false)
+        .iterate(|diff|
+            // Bring `init` into scope and add to `diff`.
+            // Then determine changes relative to `init`,
+            // which means subtracting records at round 0.
+            init.enter(&diff.scope())
+                .concat(&diff)
+                .map(|pair| (pair.hashed(), pair))
+                .group(|_hash, input, output| {
+                    // keep round-positive records as changes.
+                    let ((round, record), count) = &input[0];
+                    if *round > 0 {
+                        output.push(((0, record.clone()), -*count));
+                        output.push(((*round, record.clone()), *count));
+                    }
+                    // if any losers, increment their rounds.
+                    for ((round, record), count) in input[1..].iter() {
+                        // Subtract a *round zero* instance of the record.
+                        output.push(((0, record.clone()), -*count));
+                        output.push(((*round+1, record.clone()), *count));
+                    }
+                })
+                .map(|(_hash, pair)| pair)
+        )
+        .concat(&init)  // concat init *outside* the loop.
+        .map(|pair| { let hash = pair.hashed(); (pair.1, hash) })
+}
+```
+
+This computation develops what is very likely a *small* collection `diff`, although it does use `init` which may be not small. Fortunately, it uses `init` only once, in the input to `group`. Further, as it does not start from `init` (our `filter` fixes that) we don't end up wasting any time subtracting it back off.
+
+    Echidnatron% cargo run --release --example test -- 10000000
+        Finished release [optimized + debuginfo] target(s) in 0.08s
+         Running `target/release/examples/test 10000000`
+    6.519266834s
+    ^C
+    Echidnatron%
+
+This works out to 652 nanoseconds per record (sorting by hash, I think), and the memory footprint ends up at 621MB which is approximately what we had up above. Maybe a touch more for reasons I don't currently understand, but good enough for us for now.
+
+We were very fortunate with this computation because it was possible to reason about changes relative to `init`, as we knew that the only thing that happens to round counters is that they are incremented from zero. Our second implementation, slower but with a smaller footprint, is probably the more reasonable style of computation to expect people to be able to write for more general computations.
